objects/CusRep_Test_Object__c.object
<CustomObject>
    <fields>
        <fullName>Number_18__c</fullName>
        <label>Number 18</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
                <value>
                    <fullName>Four</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_20__c</fullName>
        <label>Text 20</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>CusRep_Test Object</label>
    <nameField>
        <displayFormat>CRTO-{00000}</displayFormat>
        <label>CusRep_Test Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CusRep_Test Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>